<?xml version="1.0"?>
<package format="2">
  <name>grape_msgs</name>
  <version>0.1.0</version>
  <description>

     grape_msgs

  </description>
  <author>Davide Faconti</author>
  <maintainer email="davide.faconti@eurecat.org">Davide Faconti</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend> 
  <depend>moveit_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend> 

</package>
