<package format="2">
  <name>mapviz_grape_plugins</name>
  <version>0.1.1</version>
  <description>

    Common plugins for the Mapviz visualization tool

  </description>
  <author>Davide Faconti</author>
  <maintainer email="davide.faconti@eurecat.org">Marc Alban</maintainer>
  <license>BSD</license>

  <build_depend>libqt5-opengl-dev</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-opengl</depend>
  <depend>libqt5-widgets</depend>
  <depend>mapviz</depend>
  <depend>marti_common_msgs</depend>
  <depend>marti_nav_msgs</depend>
  <depend>marti_visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>swri_image_util</depend>
  <depend>swri_math_util</depend>
  <depend>swri_route_util</depend>
  <depend>swri_transform_util</depend>
  <depend>swri_yaml_util</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>grape_msgs</depend>
  <depend>rospy</depend>

  <export>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>


